<resources>
    <string name="app_name">Wecompli</string>
    <string name="login">LOGIN</string>
    <string name="language">Language</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="note">NOTES:</string>
    <string name="ForgotpasswordNote">A new auto generated password emailed to your account</string>
    <string name="send">SEND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_language">SELECT LANGUAGE</string>
    <string name="english">English</string>
    <string name="douch">Dutch</string>
    <string name="french">French</string>
    <string name="germen">German</string>
    <string name="cancel">Cancel</string>
    <string name="start">START</string>
    <string name="new_version_avalible">A New Update is Available</string>
    <string name="update">Update</string>

    //Sidemenu
    <string name="dashboard">DASHBOARD</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="menu_dashboard">DASHBOARD</string>
    <string name="menu_sites">SITES</string>
    <string name="menu_Users">USERS</string>
    <string name="menu_checklist">CHECKLISTS</string>
    <string name="menu_faults">FAULTS</string>
    <string name="menu_incidents">INCIDENTS</string>
    <string name="menu_documents">DOCUMENTS</string>
    <string name="menu_email">EMAIL</string>
    <string name="leaderboard">LEADER BOARD</string>
    <string name="role">ROLES</string>

    //dadhboard
    <string name="selectsites">Select Sites</string>
    <string name="download">DOWNLOAD</string>
    <string name="adhoc">ADHOC FAULT"</string>
    <string name="todaycheck">TODAYS CHECK</string>
    <string name="startcheck">START CHECK</string>
    <string name="faults">FAULTS</string>
    <string name="active">(ACTIVE)</string>

    //
    <string name="adhoc_fault">ADHOC FAULT</string>
    <string name="add_note">Add note</string>
    <string name="feault_note">* please enter your complete\n
        fault details in the below section </string>
    <string name="add_image">  CLICK HERE \n
        FOR ADD IMAGE</string>
    <string name="notify_who">Notify Who</string>
    <string name="submit">SUBMIT</string>
    <string name="select_image_mode">Choose Image from </string>
    <string name="from_gallery">Select photo from gallery</string>
    <string name="from_camera">Capture photo from camera</string>

    //alert
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>

    //adsite
    <string name="add_site_name">Site Name (</string>
    <string name="add_site_status">Select Status</string>
    <string name="active_site">Active</string>
    <string name="inactive_site">In-active</string>

    //search
    <string name="Searchs">Search</string>
    <string name="search_site_name">Site name</string>
    <string name="search_submit">SEARCH</string>

    //site item
    <string name="usercount">USERS</string>
    <string name="checklistcount">CHECKLIST</string>
    <string name="checkcount">CHECK</string>
    <string name="faultcount">FAULT</string>
    <string name="DOCUMENTScount">DOCUMENTS</string>
    <string name="incidentscount">INCIDENTS</string>

    //add role
    <string name="role_name">Role Name(</string>
    <string name="please_role_name">* please enter role name</string>
    <string name="dashboard_add_role">DASHBOARD</string>
    <string name="sites_add_role">SITES</string>
    <string name="users_add_role">USERS</string>
    <string name="role_add_role">ROLES</string>
    <string name="checks_add_role">CHECKS</string>
    <string name="faults_add_role">FAULTS</string>
    <string name="incidents_add_role">INCIDENTS</string>
    <string name="documents_add_role">DOCUMENTS</string>
    <string name="help_add_role">HELP</string>
    <string name="settings_add_role">SETTINGS</string>

    //user list
    <string name="add_role">ADD ROLE</string>
    <string name="list_role">LIST ROLE</string>
    <string name="add_user">ADD USER</string>

    //add checklist
    <string name="chklist_name">CheckList Name (</string>
    <string name="please_checklistname">* Please Enter checklist name</string>
    <string name="add_notes">Add Note</string>
    <string name="check_selecttype">Select Type(</string>
    <string name="check_selecttypes">Select Type</string>
    <string name="select_status">Select Status(</string>


    //checklisttype
    <string name="select_type">        SELECT TYPE        </string>
    <string name="daily">DAILY</string>
    <string name="interday">INTRADAY</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="quaterly">QUATERLY</string>
    <string name="half_yearly">HALF-YEARLY</string>
    <string name="yearly">YEARLY</string>

    // different selection
    <string name="half_day_select">SELECT HALF-YEARLY DAY</string>
    <string name="Friststquater">1st Quarter</string>
    <string name="second_quater">2nd Quarter</string>
    <string name="thired_quater">3rd Quarter</string>
    <string name="fourth_quater">4th Quarter</string>
    <string name="save_date">SAVE</string>
    <string name="close_date">CLOSE</string>
    <string name="monthly_day_select">SELECT MONTH DAY</string>
    <string name="quater_day_select">SELECT QUARTERLY DAY</string>
    <string name="yearly_day_select">SELECT YEARLY DAY</string>

    //weekdays selection
    <string name="week_selection">SELECT WEEK DAYS</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>

    //role
    <string name="select_role">SELECT ROLE</string>

    //site
    <string name="select_site">SELECT SITE</string>

    //add user
    <string name="access_info">ACCESS INFO</string>
    <string name="selects_sites">Select Site</string>
    <string name="selects_role">Select Role</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="name_user">Name</string>

    //item_checklist
    <string name="note_checklist">NOTES : </string>
    <string name="site_checklist">SITES : </string>
    <string name="checks_checklist">CHECKS : </string>
    <string name="status_checklist">STATUS :</string>

    //item userlist
    <string name="head">HEAD</string>
    <string name="info">INFO</string>
    <string name="site_userlist">SITES</string>
    <string name="status_userlist">STATUS</string>


    //Add checks
    <string name="checksName">Checks Name(</string>
    <string name="please_enter_checksname">Please enter checks name</string>


    // incidents
    <string name="detailsoforganization">DETAILS OF ORGANIZATION</string>
    <string name="nameoforganization"> Name of Organization</string>
    <string name="addressoforganization">Address of Organization</string>
    <string name="postcode"> Post Code</string>
    <string name="telephone">Telephone</string>
    <string name="detailsofpersoninjured">DETAILS OF PERSON INJURED</string>
    <string name="fullnamepersoninjured">Full name of person injured</string>
    <string name="personhomeaddress">Person home address</string>
    <string name="dateofbirth"> Date of Birth</string>
    <string name="detailsofemployeecompleteform">DETAILS OF EMPLOYEE COMPLETING THE FORM</string>
    <string name="tickappropritebox">Tick approprite box</string>
    <string name="detailsofother"> Details Of Others</string>
    <string name="descriprionofaccident"> DESCRIPTION OF ACCIDENT</string>
    <string name="selectaccidentlocation">Select accident location</string>
    <string name="dateofoccurence">Date of occurence</string>
    <string name="timeofoccurence">Time of occurence</string>
    <string name="takephatoorvideo">TAKE PHATO </string>
    <string name="employmentdetails">EMPLOYMENT DETAILS</string>
    <string name="signofbehalf">Signed (on behalf of Owner/Company)</string>
    <string name="patientname">Patient Name</string>
    <string name="postion">Position</string>
    <string name="statementdetails">statement details</string>
    <string name="signbywitness">Signed by witness</string>
    <string name="addressofwitness">Address of Witeness</string>
    <string name="pairntnamecompletedby">Print name(Form completed by)</string>
    <string name="signinjuredperson">Sign(Injured person)</string>
    <string name="prientinjuredperson">Print name( injured person)</string>
    <string name="employee">  Employee</string>
    <string name="customer">Customer</string>
    <string name="visitor">  Visitor</string>
    <string name="others">Others  (Please give details below)</string>
    <string name="addsite">ADD SITE</string>

</resources>