<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:background="@color/bg_color">
    <TextView
        android:id="@+id/tv_select_weekly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/rectangular_shape_white_round_corner_lightgrey_broder"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:text="@string/week_selection"></TextView>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_mon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
       android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:text="@string/monday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_tues"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:text="@string/tuesday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_wed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:text="@string/wednesday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_thurs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:text="@string/thursday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_fri"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:layout_marginLeft="@dimen/_7sdp"
        android:text="@string/friday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_satur"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:text="@string/saturday"></androidx.appcompat.widget.AppCompatCheckBox>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_sunday"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:button="@drawable/custom_checkbox_add_role"
        android:layout_marginLeft="@dimen/_7sdp"
        android:text="@string/sunday"></androidx.appcompat.widget.AppCompatCheckBox>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_save"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentBottom="true"
                android:text="@string/save_date"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:background="@drawable/rectangular_shape_blue"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                ></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_close"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentBottom="true"
                android:text="@string/close_date"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/rectangular_shape_red"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                ></TextView>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>