<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="selectCheckList"
            type="com.wecompli.viewmodel.CustomCheckListTypeViewModel" />
    </data>
<LinearLayout
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rectangular_shape_white_round_corner_lightgrey_broder">

    <TextView
        android:id="@+id/tv_select_type"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/select_type"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintRight_toRightOf="parent"></TextView>

    <TextView
        android:id="@+id/tv_daily"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.dailySelect}"
        android:text="@string/daily"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/tv_interday"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.interdaySelect}"
        android:text="@string/interday"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/tv_weekly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.weeklySelect}"
        android:text="@string/weekly"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/tv_monthly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.monthlySelect}"
        android:text="@string/monthly"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/quaterly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.quaterlySeelct}"
        android:text="@string/quaterly"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/tv_halfYearly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.halfyearlySelect}"
        android:text="@string/half_yearly"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>
    <TextView
        android:id="@+id/tv_yearly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="@{selectCheckList.yearlySelect}"
        android:text="@string/yearly"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/dialog_grey_color"></TextView>

    ></LinearLayout>
</layout>