<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_with_logo"
        tools:context=".screens.ForgotPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:background="@drawable/top_two_rounded_corner_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/textcolor"
                android:textAllCaps="true"
                app:font="@{`rajDhaniBold`}"
                android:gravity="center"></TextView>
            <TextView
                android:id="@+id/tvemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_18sdp"
                android:layout_marginLeft="@dimen/_19sdp"
                android:text="@string/email"
                app:font="@{`rajDhaniSemiBold`}"
                android:textColor="@color/textcolor"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/_11sdp"></TextView>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_below="@+id/tvemail"

                android:layout_marginTop="@dimen/_5sdp"

                android:background="@drawable/rectangular_shape_rounded_corner_login"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_18sdp"
                app:font="@{`rajDhaniMedium`}"
                android:textSize="@dimen/_12sdp" />
            <RelativeLayout
                android:id="@+id/rl_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_18sdp"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="@dimen/_53sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    app:font="@{`rajDhaniBold`}"
                    android:gravity="center"
                    android:textSize="@dimen/_13sdp"
                    android:background="@drawable/rectangular_shape_rounded_corner_semi_red"
                    android:textColor="@color/red_text_color"
                    android:text="@string/note">

                </TextView>

                <TextView
                    android:id="@+id/tv_notetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_note"
                    app:font="@{`rajDhaniSemiBold`}"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/ForgotpasswordNote"></TextView>
                <RelativeLayout
                    android:id="@+id/btn_login"
                    android:layout_width="@dimen/_175sdp"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_below="@+id/tv_notetext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"

                    android:background="@drawable/botton_rounded_corner" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/_14sdp"
                        app:font="@{`rajDhaniBold`}"
                        android:text="@string/send"></TextView>
                    <ImageView
                        android:layout_width="@dimen/_21sdp"
                        android:layout_height="@dimen/_18sdp"

                        android:layout_centerVertical="true"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:background="@drawable/mail_box"

                        >

                    </ImageView>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
