<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"

            android:background="@drawable/circle_shape_search"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:drawableLeft="@drawable/search">

        </TextView>

        <TextView
            android:id="@+id/tv_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Searchs"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"></TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sitename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/search_site_name"
        android:textColor="#1E3F6C"
        android:textSize="@dimen/_14sdp">

    </TextView>

    <EditText
        android:id="@+id/etsherch_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rectangular_shape_rounded_corner_grey"
        android:inputType="text"
        android:paddingLeft="@dimen/_9sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_9sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"

        >

    </EditText>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="bottom">


        <TextView
            android:id="@+id/Searchsite"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/gradient_login_button"
            android:gravity="center"
            android:text="@string/search_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>
</LinearLayout>